@@ -1,6 +1,8 @@
 2014-03-10         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.h, dfa.c: Sync with grep. Yet again.
+	* regex_internal.c (built_wcs_upper_buffer, build_upper_buffer):
+	Fixes from GNULIB for mixed case matching on Mac OS X.
 
 2014-03-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
